Fall 2025 schedules + an updated color palette for fun :)

--- a/igm_mycourses_templates/schedule_simple.html
+++ b/igm_mycourses_templates/schedule_simple.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/content/enforced2/835693-IGMFacultyTeachingResources2020/igm_mycourses_templates/custom.css">
-    <link rel="stylesheet" href="/content/enforced2/835693-IGMFacultyTeachingResources2020/igm_mycourses_templates/schedule.css">
+    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="schedule.css">
     <title>Course Schedule</title>
 </head>
 
@@ -23,21 +23,23 @@
             content for your course and remove this header before sharing
             with students!<br />Switch the schedule template using "Select a Document Template" in the myCourses editor.<br />If you want to use Erika's template to help
             plan/generate your schedule, you can make a copy of
-            <a href="https://docs.google.com/spreadsheets/d/1oxRF8P6hyI_etiUKNl7VfdkAbm0ySi4VynaNLvjby-U/edit?usp=sharing">this Google Sheet</a>. Be warned that it's pretty hacky!
+            <a href="https://docs.google.com/spreadsheets/d/1qiKb554VL1gcdyZwF2ak6i178bAETq0_Mf-WuxXtp2A/edit?usp=sharing">this Google Sheet</a>. Be warned that it's pretty hacky!
         </p>
     </div>
     <h2>Important Dates, Spring 2025 (2245)</h2>
     <ul>
-        <li>1/13: Day, evening and online classes begin</li>
-        <li>1/18: Saturday classes begin</li>
-        <li>1/20: Martin Luther King Jr. Day (No classes)</li>
-        <li>1/21: Last day of Add/Drop period</li>
-        <li>3/9-3/16: Spring Break (No classes)</li>
-        <li>4/4: Last day to drop from classes with a grade of "W"</li>
-        <li>4/28: Last day, evening, and online classes</li>
-        <li>4/29: Reading Day</li>
-        <li>4/30-5/7: Final exams</li>
-        <li>5/9: Final grades due</li>
+        <li>8/25: Day, evening and online classes begin</li>
+        <li>8/30: Saturday classes begin</li>
+        <li>9/1: Labor Day (No classes)</li>
+        <li>9/2: Last day of Add/Drop period</li>
+        <li>10/13-14: Fall Break (No classes)</li>
+        <li>11/7: Last day to drop from classes with a grade of "W"</li>
+        <li>11/26: No classes - University closes at 2pm</li>
+        <li>11/27-28: Thanksgiving Holiday - University closed</li>
+        <li>12/8: Last day, evening, and online classes</li>
+        <li>12/9: Reading Day</li>
+        <li>12/10-17: Final exams</li>
+        <li>12/19: Final grades due</li>
     </ul>
     <p class="intro">
         Do NOT make travel plans for the finals period until ALL of your
@@ -69,7 +71,7 @@
                 <tr>
                     <td class="center">
                         <h4>1</h4>
-                        <p><em>(1/13-1/19)</em></p>
+                        <p><em>(8/25-8/31)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -81,10 +83,11 @@
                 <tr>
                     <td class="center">
                         <h4>2</h4>
-                        <p><em>(1/20-1/26)</em></p>
+                        <p><em>(9/1-9/7)</em></p>
                     </td>
                     <td>
-                        <p><em>M 1/20: Martin Luther King Jr. Day (No classes)</em></p>
+                        <p><em>M 9/1: Labor Day (No classes)
+                                <br>T 9/2: Last day of Add/Drop</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -93,7 +96,7 @@
                 <tr>
                     <td class="center">
                         <h4>3</h4>
-                        <p><em>(1/27-2/2)</em></p>
+                        <p><em>(9/8-9/14)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -105,7 +108,7 @@
                 <tr>
                     <td class="center">
                         <h4>4</h4>
-                        <p><em>(2/3-2/9)</em></p>
+                        <p><em>(9/15-9/21)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -117,7 +120,7 @@
                 <tr>
                     <td class="center">
                         <h4>5</h4>
-                        <p><em>(2/10-2/16)</em></p>
+                        <p><em>(9/22-9/28)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -129,7 +132,7 @@
                 <tr>
                     <td class="center">
                         <h4>6</h4>
-                        <p><em>(2/17-2/23)</em></p>
+                        <p><em>(9/29-10/5)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -141,7 +144,7 @@
                 <tr>
                     <td class="center">
                         <h4>7</h4>
-                        <p><em>(2/24-3/2)</em></p>
+                        <p><em>(10/6-10/12)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -153,22 +156,10 @@
                 <tr>
                     <td class="center">
                         <h4>8</h4>
-                        <p><em>(3/3-3/9)</em></p>
+                        <p><em>(10/13-10/19)</em></p>
                     </td>
                     <td>
-                        <p></p>
-                    </td>
-                    <td>
-                        <p></p>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="center">
-                        <h4>Spring Break</h4>
-                        <p><em>(3/10-3/16)</em></p>
-                    </td>
-                    <td>
-                        <p><em>Spring Break</em></p>
+                        <p><em>M 10/13 - T 10/14: Fall Break (No classes)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -177,7 +168,7 @@
                 <tr>
                     <td class="center">
                         <h4>9</h4>
-                        <p><em>(3/17-3/23)</em></p>
+                        <p><em>(10/20-10/26)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -189,7 +180,7 @@
                 <tr>
                     <td class="center">
                         <h4>10</h4>
-                        <p><em>(3/24-3/30)</em></p>
+                        <p><em>(10/27-11/2)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -201,10 +192,10 @@
                 <tr>
                     <td class="center">
                         <h4>11</h4>
-                        <p><em>(3/31-4/6)</em></p>
+                        <p><em>(11/3-11/9)</em></p>
                     </td>
                     <td>
-                        <p></p>
+                        <p><em>F 11/7: Last day to withdraw</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -213,7 +204,7 @@
                 <tr>
                     <td class="center">
                         <h4>12</h4>
-                        <p><em>(4/7-4/13)</em></p>
+                        <p><em>(11/10-11/16)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -225,7 +216,7 @@
                 <tr>
                     <td class="center">
                         <h4>13</h4>
-                        <p><em>(4/14-4/20)</em></p>
+                        <p><em>(11/17-11/23)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -237,10 +228,10 @@
                 <tr>
                     <td class="center">
                         <h4>14</h4>
-                        <p><em>(4/21-4/27)</em></p>
+                        <p><em>(11/24-11/30)</em></p>
                     </td>
                     <td>
-                        <p></p>
+                        <p><em>W 11/26 - F 11/28: Thanksgiving Break</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -249,7 +240,7 @@
                 <tr>
                     <td class="center">
                         <h4>15</h4>
-                        <p><em>(4/28)</em></p>
+                        <p><em>(12/1)</em></p>
                     </td>
                     <td>
                         <p></p>
@@ -260,8 +251,19 @@
                 </tr>
                 <tr>
                     <td class="center">
-                        <h4>Finals Week</h4>
+                        <h4>16</h4>
+                        <p><em>(12/8)</em></p>
+                    </td>
+                    <td>
+                        <p><em>M 12/8: Last day of classes</em></p>
+                    </td>
+                    <td>
                         <p></p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="center">
+                        <h4>Finals</h4>
                     </td>
                     <td>
                         <p></p>
@@ -273,6 +275,4 @@
             </tbody>
         </table>
     </div>
-</body>
-
-</html>
+</body></html>
