--- a/igm_mycourses_templates/topic.html
+++ b/igm_mycourses_templates/topic.html
@@ -31,6 +31,12 @@
 
     <h2>References</h2>
     <h3>Readings</h3>
+    <h4>Textbook</h4>
+    <ul>
+        <li>...</li>
+    </ul>
+
+    <h4>Online</h4>
     <ul>
         <li>...</li>
     </ul>
