Made all the schedules say FALL 2025

--- a/igm_mycourses_templates/schedule_mwf.html
+++ b/igm_mycourses_templates/schedule_mwf.html
@@ -26,7 +26,7 @@
             <a href="https://docs.google.com/spreadsheets/d/1qiKb554VL1gcdyZwF2ak6i178bAETq0_Mf-WuxXtp2A/edit?usp=sharing">this Google Sheet</a>. Be warned that it's pretty hacky!
         </p>
     </div>
-    <h2>Important Dates, Spring 2025 (2241)</h2>
+    <h2>Important Dates, Fall 2025 (2251)</h2>
     <ul>
         <li>8/25: Day, evening and online classes begin</li>
         <li>8/30: Saturday classes begin</li>
@@ -1000,4 +1000,6 @@
             </tbody>
         </table>
     </div>
-</body></html>
+</body>
+
+</html>
